blocks/tiles/tiles.css
.tiles-wrapper {
    width:100%;
}

.section.tiles-container {
    display: flex;
    flex-direction: column;
}

.section.tiles-container h2 {
    border-bottom: 2px solid #8f8f8f;
    margin-bottom: 2rem;
    padding-bottom: 6px;
    font-size: calc(1.375rem + 1.5vw);
    line-height: 1.1;
    font-weight: 800;
    color: #28061e;
}

.section.tiles-container h2::after {
    content: "";
    display: block;
    border-bottom: 2px solid #ff7d5a;
    margin-top: 8px;
    margin-bottom: 0;
    max-width: 200px;
}

.section.tiles-container h2:first-child {
    margin-top: 0;
}

.tile {
    display: flex;
    flex-direction: column;
    overflow: hidden;
    margin: 1rem;
}

.tile .img-container {
    position: relative;
    min-width: 120px;
    height: 120px;
    border-radius: 6px;
}

.tile .img-container img {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    object-fit: cover;
    object-position: center center;
    opacity: 1;
    transition: opacity 500ms ease 0s;
    border-radius: 6px;
}

.tile .category-link-btn {
    --bg-color: inherit;

    background-color: var(--bg-color);
    margin-top: 5px;
    color: var(--color-purple);
    margin-bottom: 10px;
    padding-left: 0;
    padding-right: 0;
    line-height: 1.2rem;
    display: inline-block;
    border-radius: 15px;
    font-family: var(--heading-font-family);
    font-weight: 800;
    font-size: var(--heading-font-size-xs);
}

.tile .tile-contents {
    --bg-color: inherit;

    background-color: var(--bg-color);
    width: 100%;
}

.tile .tile-contents h3 {
    margin-bottom: 0.5rem;
    font-size: 1rem;
    line-height: 1;
    color: #28061e;
}

.tile .tile-contents .date-author-container {
    font-size: .875rem;
}

.tile.tile-0 {
    display: flex;
    position: relative;
    min-height: min-content;
    flex-direction: column;
}

.tile.tile-0 .img-container {
    height: auto;
}

.tile.tile-0 .img-container .img-padding {
    width:100%;
    padding-bottom: 75%;
}

.tile.tile-0 .tile-contents{
    position: absolute;
    bottom: 0;
    left: 0;
    color: white;
    padding: 5px;
    border-bottom-left-radius: 6px;
    border-bottom-right-radius: 6px;
    display: flex;
    justify-content: center;
    flex-direction: column;
    max-width: 100%;
    box-sizing: border-box;
}

.tile.tile-0 .category-link-btn {
    position: absolute;
    top: -15px;
    left: 2rem;
    box-shadow: 0 2px 4px 0 rgb(0 0 0 / 20%);
    border-radius: 15px;
    font-family: Raleway,sans-serif;
    font-weight: 800;
    font-size: .875rem;
    color: #fff;
    line-height: 2rem;
    height: 2rem;
    padding-left: 14px;
    padding-right: 14px;
    display: none;
}

.tile.tile-0 .category-link-btn.category-link-btn-mobile {
    display: inline;
    top: 1rem
}

.tile.tile-0 .tile-contents h3 {
    font-size: 1rem;
    color: #fff;
    text-shadow: 2px 3px 5px rgb(0 0 0 / 50%);
    text-overflow: ellipsis;
}

.tile.tile-0 .tile-contents .date-author-container {
    color: #fff;
    text-shadow: 1px 1px 3px rgb(0 0 0 / 70%);
    font-size: var(--body-font-size-xs);
    font-weight: 400;
    line-height: 1.4;
}

@media (min-width: 360px) {
    .tile.tile-0 .tile-contents{
        padding: 1.5rem 2rem 1rem;
    }

    .tile.tile-0 .tile-contents h3 {
        font-size: 1.5rem;
    }
}

@media screen and (min-width: 461px) {
    .tile {
        flex-direction: unset;
    }

    .tile .tile-contents {
        padding-left: 1.5rem;
    }

    .tile .tile-contents h3 {
        font-size: 1.25rem;
        line-height: 1.1;
    }
}


@media screen and (min-width: 768px) {
    .tile .img-container {
        min-width: 146px;
        height: 146px;
    }

    .tile.tile-0 .img-container .img-padding {
        padding-bottom: 56.25%;
    }

    .tile.tile-0 .category-link-btn {
        display: inline;
    }

    .tile.tile-0 .category-link-btn.category-link-btn-mobile {
        display: none;
    }
}

@media (max-width: 1023px) {
    .small-tiles-wrapper .tile .category-link-btn-transparent {
        background-color: transparent;
    }
}

@media screen and (min-width: 1024px) {
    .tiles-block-container {
        display: flex;
        justify-content: space-between;
    }

    .tile.tile-0 {
        flex-grow: 1;
        margin-left: 0;
    }

    .small-tiles-wrapper {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        width: 41.6667%;
    }

    .small-tiles-wrapper .category-link-btn {
        box-shadow: 0 2px 4px 0 rgb(0 0 0 / 20%);
        border-radius: 15px;
        font-weight: 800;
        font-size: .875rem;
        color: #fff;
        line-height: 30px;
        height: 30px;
        padding-left: 14px;
        padding-right: 14px;
    }
}

@media screen and (min-width: 1216px) {
    .tile .tile-contents h3 {
        font-size: 1.375rem;
    }

    .tile .img-container {
        min-width: 200px;
        height: 200px;
    }
}

